feat(python): add managed venue instances